--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Health Scale</string>
+    <string name="app_name">Health Bliss</string>
     <string name="updateDetails">Update Details</string>
     <string name="Language">Language</string>
     <string name="units">Units</string>
@@ -56,4 +56,25 @@
     <string name="BodyData">Body Data</string>
     <string name="checkPhoneStatus">Check Phone status</string>
     <string name="SearchAgain">Search again</string>
+    <string name="Save">Save</string>
+    <string name="AddDevicePrompt10">No device found</string>
+    <string name="AddDevicePrompt11">1. Check whether the scale can be turned on properly: make sure batteries are correctly installed; gently step on the scale to turn it on. If the screen lights up and displays 0.0, it’s turned on successfully.</string>
+    <string name="AddDevicePrompt12">2. Check whether the Bluetooth is turned on: the Bluetooth icon will appear on the top of the phone screen if yes.</string>
+    <string name="AddDevicePrompt13">3. The distance between the phone and the scale should be within 2 meters without any obstacles.</string>
+    <string name="AddDevicePrompt14">4. Exit the APP, then restart the APP.</string>
+    <string name="AddDevicePrompt15">5. Reboot your phone.</string>
+    <string name="AddDevicePrompt16">1. Install batteries or fully charge the scale.</string>
+    <string name="AddDevicePrompt17">2. Gently step on the scale to turn on.</string>
+    <string name="AddDevicePrompt18">3. Make sure your phone is close to the scale.</string>
+    <string name="AMRP1">Select your activity level</string>
+    <string name="AMRP2">(Lightly Active)</string>
+    <string name="AMRP3">(Moderately Active)</string>
+    <string name="AMRP4">(Active)</string>
+    <string name="AMRP5">(Extremely Active)</string>
+    <string name="AMRP6">Sedentary (little or no exercise)</string>
+    <string name="AMRP7">Lightly active (1–3 days/week)</string>
+    <string name="AMRP8">Moderately active (3–5 days/week)</string>
+    <string name="AMRP9">Active (5–6 days/week)</string>
+    <string name="AMRP10">Extremely active (6–7 days/week)</string>
+    <string name="AMRP11">(Sedentary)</string>
 </resources>
